--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Color border</title>
   </head>
   <body>
-    <h1>Welcome!</h1>
+    <h1>Welcome To my Color border!</h1>
     <div class="container"></div>
     <script src="script.js"></script>
   </body>
